--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "flowbite-react": "^0.6.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
