--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
     "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "firebase": "^10.7.1",
     "flowbite-react": "^0.6.4",
+    "framer-motion": "^10.16.16",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.3",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
